<resources>
    <string name="app_name">SIH</string>
    <string name="refer_here_for_immediate_help">Refer here for immediate help</string>
    <string name="navigate">Navigate</string>
    <string name="criticality_1">Criticality 1</string>
    <string name="criticality_2">Criticality 2</string>
    <string name="is_it_life_threatening">Is It Life Threatening?</string>
    <string name="no">No</string>
    <string name="who_are_you">who are you?</string>
    <string name="search_any_hospital">Search Any Hospital</string>
    <string name="search">Search</string>
    <string name="search_nearby_hospitals">Search Nearby Hospitals</string>
    <string name="is_the_patient_conscious">Is the Patient Conscious?</string>
    <string name="yes">Yes</string>
    <string name="can_theperson_talk">Can ThePerson Talk?</string>
    <string name="is_the_person_bleeding">is the person bleeding?</string>
    <string name="does_the_person_experience_severe_pain">Does the person experience severe pain?</string>
    <string name="can_the_person_talk">Can The Person Talk?</string>
    <string name="is_patient_disoriented">Is Patient Disoriented?</string>
    <string name="change_language">Change Language</string>
    <string name="medical_staff">MEDICAL STAFF</string>
    <string name="general_citizen">General Citizen</string>
    <string name="if_the_patient_is_also_unconscious_give_cpr">if the patient is also unconscious give cpr</string>
    <string name="if_the_patient_is_also_breathless_give_cpr">if the patient is also breathless give cpr</string>
    <string name="bleeding">Bleeding</string>
    <string name="unconciousness">unconciousness</string>
    <string name="breathlessness">breathlessness</string>
    <string name="fracture">fracture</string>
    <string name="burns">burns</string>
    <string name="drowning">drowning</string>
    <string name="heart_attack">heart attack</string>
    <string name="poisoning">poisoning</string>
    <string name="what_is_the_patient_suffering_from">What is the patient suffering from?</string>
    <string name="nearby">Search Nearby Hospitals</string>

</resources>
