<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui"
    tools:context=".Screen3f">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/can_theperson_talk"
        android:textSize="40dp"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/custom_button"
        android:onClick="yes3"
        android:text="@string/yes"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="292dp"
        android:background="@drawable/custom_button"
        android:onClick="no3"
        android:text="@string/no"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
    <ImageView
        android:layout_width="70dp"
        android:id="@+id/spk"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="speak"
        android:src="@drawable/mic"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />
</androidx.constraintlayout.widget.ConstraintLayout>